fixed nappy talk width stretch

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -35,7 +35,7 @@ body {
         width: inherit;
     }   
     .nappy-cov {
-        width: 50% !important;
+        width: 42% !important;
         max-height: 74vh;
     }
     .album-cov {
